--- a/Geovispaper/geovis-boilerplate.tex
+++ b/Geovispaper/geovis-boilerplate.tex
@@ -71,7 +71,7 @@
 
 
 
-\title{Real-Time Dynamic Global Illumination}
+\title{Improved Imperfect Shadow Maps}
 %\subtitle{[Extended Abstract]}
 %
 % You need the command \numberofauthors to handle the 'placement
